# stranger

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  config.example.toml  config.toml
src/: main.rs
src/app/: app.rs  mod.rs  test_utils.rs
src/app/config/: constants.rs
src/app/draw/: draw.rs  mod.rs
src/app/model/: file_entry.rs  miller.rs  mod.rs
src/app/model/clipboard/: mod.rs
src/app/model/file/: mod.rs
src/app/model/fs/: mod.rs
src/app/model/miller/: columns.rs  entries.rs  mod.rs  positions.rs
src/app/model/notification/: mod.rs
src/app/state/: bookmarks.rs  file_managment.rs  hint_bar.rs  mark.rs  mod.rs  modal.rs  navigation.rs  search.rs  state.rs
src/app/ui/: mod.rs  ui.rs
src/app/ui/body/: bookmarks.rs  mod.rs  row.rs
src/app/ui/body/components/: column_widget.rs  mod.rs
src/app/ui/file_preview/: mod.rs
src/app/ui/modal/: mod.rs
src/app/ui/modal/hint_bar/: mod.rs
src/app/ui/preview/: mod.rs
src/app/utils/: i18n.rs  mod.rs
src/app/utils/config_parser/: default_config.rs  mod.rs
src/app/utils/fs/: mod.rs
