[package]
name = "stranger"
version = "0.1.0"
edition = "2021"

[dependencies]
ratatui = "0.29"
tui-textarea = "0.7.0"
crossterm = { version = "0.27", features = ["event-stream"] }
tokio = { version = "1.40", features = ["full"] }
open = "5.3"
toml = "0.8"
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }
clap = { version = "4.5", features = ["derive"] }
once_cell = "1.20"
fs_extra = "1.3"
syntect = "5.2"

[dev-dependencies]
tempfile = "3.20.0"
